Fix z-index

--- a/plugins/ide/trueautomation-atom/styles/trueautomation-atom.less
+++ b/plugins/ide/trueautomation-atom/styles/trueautomation-atom.less
@@ -57,3 +57,7 @@
     color: #dd5555;
   }
 }
+
+atom-overlay.ta-element {
+  z-index: 0 !important;
+}
